--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* Tailwind style shortcuts */
+.input {
+    @apply w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500;
+  }
+  .input-file {
+    @apply w-full text-sm border border-gray-300 p-2 rounded-lg;
+  }
+  
